# Airflow-Custom-Operator

./: README.md  pyproject.toml  requiremets.txt  test.Dockerfile
src/: __init__.py  callbacks.py  configs.py  constants.py  custom_dag.py  dag_factory.py  dag_utils.py  hooks.py  nexus_path_extractor.py  operator.py  sensors.py  utils.py
tests/: test_notify_telegram.py
