[tool.poetry]
name = "dagify"
version = "0.0.2"
description = ""
authors = ["Anton Baltachev <anton.baltachev@lenta.com>"]
readme = "README.md"
packages = [{ include = "dagify" }]

[tool.poetry.dependencies]
python = "^3.8"
omegaconf = "2.2.3"
retry = "0.9.2"
boto3 = "1.26.11"
pydantic = "1.10.2"
loguru = "^0.6.0"
markupsafe = "2.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
isort = "^5.12.0"
flake8 = "5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"


[tool.mypy]
# Untyped definitions and calls:
#   https://mypy.readthedocs.io/en/stable/config_file.html#untyped-definitions-and-calls
python_version = 3.8
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# Configuring warnings
#   https://mypy.readthedocs.io/en/stable/config_file.html#configuring-warnings
warn_redundant_casts = true
warn_unused_ignores = true

no_implicit_optional = true
strict_optional = true
exclude = "docs|tests|data|notebooks|models"


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.mypy-uvicorn]
ignore_missing_imports = true
